; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_namei.c_ext2fs_namei.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_namei.c_ext2fs_namei.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@EXT2_ET_MAGIC_EXT2FS_FILSYS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ext2fs_namei(%struct.TYPE_5__* %0, i32 %1, i32 %2, i8* %3, i32* %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i32* %4, i32** %11, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = load i32, i32* @EXT2_ET_MAGIC_EXT2FS_FILSYS, align 4
  %16 = call i32 @EXT2_CHECK_MAGIC(%struct.TYPE_5__* %14, i32 %15)
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @ext2fs_get_mem(i32 %19, i8** %12)
  store i64 %20, i64* %13, align 8
  %21 = load i64, i64* %13, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %5
  %24 = load i64, i64* %13, align 8
  store i64 %24, i64* %6, align 8
  br label %37

25:                                               ; preds = %5
  %26 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %10, align 8
  %31 = call i32 @strlen(i8* %30)
  %32 = load i8*, i8** %12, align 8
  %33 = load i32*, i32** %11, align 8
  %34 = call i64 @open_namei(%struct.TYPE_5__* %26, i32 %27, i32 %28, i8* %29, i32 %31, i32 0, i32 0, i8* %32, i32* %33)
  store i64 %34, i64* %13, align 8
  %35 = call i32 @ext2fs_free_mem(i8** %12)
  %36 = load i64, i64* %13, align 8
  store i64 %36, i64* %6, align 8
  br label %37

37:                                               ; preds = %25, %23
  %38 = load i64, i64* %6, align 8
  ret i64 %38
}

declare dso_local i32 @EXT2_CHECK_MAGIC(%struct.TYPE_5__*, i32) #1

declare dso_local i64 @ext2fs_get_mem(i32, i8**) #1

declare dso_local i64 @open_namei(%struct.TYPE_5__*, i32, i32, i8*, i32, i32, i32, i8*, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @ext2fs_free_mem(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
